# ncnn-android-yolov5-demo

./: build.gradle  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: best.ncnn.param  mouth_best.ncnn.param
app/src/main/java/com/tencent/yolov5ncnn/: Camera2Helper.java  Camera2Listener.java  CameraActivity.kt  MainActivity.java  YoloV5Ncnn.java
app/src/main/jni/: CMakeLists.txt  yolov5_pnnx.cpp
app/src/main/jni/opencv-mobile-4.5.4-android/sdk/native/jni/abi-x86/: OpenCVConfig.cmake
app/src/main/res/layout/: activity_camera.xml  main.xml
